Fix main property in bower.json
main prop should not include minified files.
See
https://docs.google.com/document/d/1APq7oA9tNao1UYWyOm8dKqlRP2blVkROYLZ2fLIjtWc
for more information.

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "Michelle Bu <michelle@michellebu.com>"
   ],
   "description": "Simple peer-to-peer data and media using WebRTC.",
-  "main": "peer.min.js",
+  "main": "peer.js",
   "keywords": [
     "WebRTC",
     "peer",
